@@ -2,6 +2,7 @@
 -----
 1. Add ability to search for items in some lists.
 2. Show skip buttons over cover-art when clicked.
+3. Remove now-playing pulse, as cliking covef shows skip buttons.
 
 4.1.6
 -----
